Sun Feb 15 22:08:53 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkoptionmenu.c (gtk_option_menu_get_history): Add 
	deprecation note pointing people to GtkComboBox.

Sun Feb 15 02:49:45 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreednd.c: 
	* gtk/gtktreeview.c: Document the tree DND API.

	* gtk/gtktreeview.c (gtk_tree_view_unset_rows_drag_source): 
	Call gtk_drag_source_unset().  
	
Sun Feb 15 00:49:59 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_class_init): 
	Make stock_size an uint property, to allow custom icon 
	sizes. Also clarify the blurb.  (#130047, Erik Grinaker)

Sat Feb 14 11:05:26 2004  Manish Singh  <yosh@gimp.org>

        * configure.in: Remove unnecessary STRIP_* definitions, and GNU
        make check.

2004-02-13  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesystemunix.c (gtk_file_system_unix_add_bookmark):
	Duh, duh, duh!  Don't bail out if the bookmarks file doesn't exist
	the very first time you try to save one.

2004-02-13  Federico Mena Quintero  <federico@ximian.com>

	Fix #129020.

	* gtk/gtkfilechooserdialog.c
	(set_default_size): New function, sets a reasonable default size
	for the window.
	(gtk_file_chooser_dialog_realize): New function, call
	set_default_size().
	(gtk_file_chooser_dialog_style_set): Likewise.
	(gtk_file_chooser_dialog_screen_changed): Likewise.

	* tests/testfilechooser.c (main): Don't set a default size for the
	dialog.

Sat Feb 14 00:05:18 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreemodelfilter.c (bsearch_elt_with_offset): 
	Use do instead of while.  (#134031, Morten Welinder);

Sat Feb 14 00:00:52 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Suppress xsltproc and xmlcatalog checks
	if enable_man=no.  (#134162, Julio M. Merino Vidal)

Fri Feb 13 23:54:48 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Remove checks for sgml2html. It was once
	used for building the linuxdoc version of the tutorial.